# RP2040-OGXbox-Controller

./: .gitignore  README.md
diagnostics/xid_usb_diag/: Makefile  README.md  main.c  udp_diag_listener.ps1
docs/: gpio-pio-usb.md  wiring.md
firmware/RP2040_OGXbox_Controller/: README.md  RP2040_OGXbox_Controller.ino  xid_device.cpp  xid_device.h  xid_gamepad.cpp  xid_gamepad.h
firmware/RP2040_OGXbox_Controller_GPIO_PIO/: CMakeLists.txt  README.md  main.c  newlib_locks.c
firmware/RP2040_UART_Bridge/: README.md  RP2040_UART_Bridge.ino
scripts/: build_arduino.ps1  build_diag_msys.ps1  build_gpio_pio.ps1  example_controls.xid  upload_xbe.ps1
tools/: xidctl.ps1
